--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,7 @@
-Hello world!
-
-It works!
+<!doctype html>
+<html lang="en">
+    <head></head>
+    <body>
+        <h1>Deaths during the L.A. riots</h1>
+    </body>
+</html>
